--- a/best-five-dom/index.html
+++ b/best-five-dom/index.html
@@ -107,7 +107,93 @@
                         </div>
                     </div>
                 </div>
-              
+                <!-- aside item start  -->
+                <div>
+                    <div class="grid grid-rows-2 grid-flow-col gap-4">
+                        <!-- selected part start  -->
+                        <div class="overflow-x-auto  bg-black ">
+                            <h2 class="text-2xl text-center text-white my-5">Selected - V</h2>
+                            <ul id="selected-v"
+                                class="list-decimal list-inside marker:text-white-500 text-white px-10 text-left font-semibold">
+                                <LI>The first item</LI>
+                                <li>The second item</li>
+                                <li>The third item</li>
+                                <li>The second item</li>
+                                <li>The third item</li>
+                            </ul>
+                        </div>
+                        <!-- selected part end  -->
+                        <!-- Budget part start  -->
+                        <div class="mt-1 bg-black">
+                            <h3 class="text-2xl text-center my-3  text-white font-bold">Budget</h3>
+                            <div class="md:flex md:items-center mb-6">
+                                <div class="md:w-1/3">
+                                    <label class="block text-white font-bold md:text-right mb-1 md:mb-0 pr-4"
+                                        for="inline-full-name">
+                                        Per Player
+                                    </label>
+                                </div>
+                                <div class="md:w-2/4">
+                                    <input
+                                        class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
+                                        id="income-value" type="number" placeholder="10000">
+                                </div>
+                            </div>
+                            <div class="md:flex md:items-center">
+                                <div class="md:w-1/3"></div>
+                                <div class="md:w-2/3">
+                                    <button id="calculate_btn"
+                                        class="mb-2 shadow bg-sky-700 text-white hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                                        type="button">
+                                        Calculate
+                                    </button>
+                                </div>
+                            </div>
+
+                            <h3 class="text-1xl text-center mb-4  text-white font-semibold">Player Expenses</h3>
+                            <div class="md:flex md:items-center mb-6">
+                                <div class="md:w-1/3">
+                                    <label class="block  text-white font-bold md:text-right mb-1 md:mb-0 pr-4"
+                                        for="inline-full-name">
+                                        Manager
+                                    </label>
+                                </div>
+                                <div class="md:w-2/4">
+                                    <input
+                                        class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
+                                        id="food" type="number" placeholder="3000">
+                                </div>
+                            </div>
+                            <div class="md:flex md:items-center mb-6">
+                                <div class="md:w-1/3">
+                                    <label class="block  text-white font-bold md:text-right mb-1 md:mb-0 pr-4"
+                                        for="inline-full-name">
+                                        Coach
+                                    </label>
+                                </div>
+                                <div class="md:w-2/4">
+                                    <input
+                                        class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
+                                        id="rent" type="number" placeholder="2000">
+                                </div>
+                            </div>
+                            <div class="md:flex md:items-center">
+                                <div class="md:w-1/3"></div>
+                                <div class="md:w-2/3">
+                                    <button id="calculate_btn"
+                                        class="shadow bg-sky-700 text-white hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                                        type="button">
+                                        Calculate Total
+                                    </button>
+                                </div>
+                            </div>
+                            <h3 class="text-1xl text-center mb-4  text-white font-semibold mt-5">Total <span
+                                    class=" text-red-600" id="total-expenses">00</span></h3>
+                        </div>
+                    </div>
+                    <!-- budget part end  -->
+                </div>
+                <!-- aside item end  -->
             </div>
             </div>
         </section>
@@ -117,7 +203,7 @@
 
 
 
-    
+
 </body>
 
 </html>
