--- a/best-five-dom/index.html
+++ b/best-five-dom/index.html
@@ -199,7 +199,11 @@
         </section>
     </main>
     <!-- main section end -->
-
+    <!-- footer start  -->
+    <footer>
+        <h3 class="text-2xl bg-black text-white text-center p-12 mt-3">Copyright@ 2022 All Rights Reserved.</h3>
+    </footer>
+    <!-- footer end -->
 
 
 
