--- a/best-five-dom/index.html
+++ b/best-five-dom/index.html
@@ -135,7 +135,7 @@
                                 <div class="md:w-2/4">
                                     <input
                                         class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
-                                        id="per-player" type="number" placeholder="1000">
+                                        id="per-player" type="text" placeholder="1000">
                                 </div>
                             </div>
                             <div class="md:flex md:items-center">
@@ -161,7 +161,7 @@
                                 <div class="md:w-2/4">
                                     <input
                                         class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
-                                        id="manager" type="number" placeholder="2000">
+                                        id="manager" type="text" placeholder="2000">
                                 </div>
                             </div>
                             <div class="md:flex md:items-center mb-6">
@@ -174,7 +174,7 @@
                                 <div class="md:w-2/4">
                                     <input
                                         class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
-                                        id="coach" type="number" placeholder="4000">
+                                        id="coach" type="text" placeholder="4000">
                                 </div>
                             </div>
                             <div class="md:flex md:items-center">
