--- a/best-five-dom/index.html
+++ b/best-five-dom/index.html
@@ -27,7 +27,6 @@
     </header>
     <!-- header section end -->
     <!-- main section start -->
-
     <main>
         <section class="mt-10">
             <div class="grid grid-cols-4 grid-flow-col gap-4">
@@ -205,7 +204,7 @@
     </footer>
     <!-- footer end -->
 
-
+<!-- script file -->
 <script src="js/utilities.js"></script>
 <script src="js/players.js"></script>
 </body>
